--- a/web/css/style.css
+++ b/web/css/style.css
@@ -6,11 +6,11 @@ html {
 
 body {
   margin: 0;
-  font-size: 1em;
+  font-size: 16px;
 }
 
 .content {
-  max-width: 920px;
+  max-width: 960px;
   margin: 0 auto;
   padding: 0 16px;
 }
@@ -18,6 +18,11 @@ body {
 input {
   width: 100%;
   font-size: 1em;
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+  padding: 2px 0;
 }
 
 html, body {
@@ -53,5 +58,10 @@ footer {
 }
 
 .content .wrapper {
-  margin: 16px 0 32px;
+  margin: 8px 0 24px;
+}
+
+.result-wrapper {
+  padding: 8px;
+  background-color: #def2de;
 }
