Add error handling for the client

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -63,5 +63,12 @@ footer {
 
 .result-wrapper {
   padding: 8px;
+}
+
+.success {
   background-color: #def2de;
+}
+
+.error {
+  background-color: #f7eaea;
 }
