--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,12 +1,23 @@
 html {
   color: #222;
-  font-size: 1em;
-  line-height: 1.4;
 }
 
 body {
   margin: 0;
   font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
+  display: flex;
+  flex-direction: column;
+  font-weight: 400;
+  ine-height: 1.5em;
+}
+
+html, body {
+  height: 100%;
+}
+
+strong {
+  font-weight: 700;
 }
 
 .content {
@@ -15,54 +26,124 @@ body {
   padding: 0 16px;
 }
 
-input {
+header a:link,
+header a:visited,
+header a:active,
+header a:focus,
+header a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+input,
+input:hover {
+  background-color: #f7f7f7;
   width: 100%;
-  font-size: 1em;
   font-family: inherit;
-  font-size: 100%;
-  line-height: 1.15;
+  font-size: 1.2em;
+  line-height: 2.5em;
   margin: 0;
-  padding: 2px 0;
+  padding: 0;
+  border: 0 none;
+  border-bottom: 1px solid #f7f7f7;
+  z-index: 1;
 }
 
-html, body {
-  height: 100%;
-  background-color: #f6f6f6;
+input:focus,
+input:active {
+  border-bottom: 1px solid #3a6c44;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
+button.clear-button,
+button.clear-button:focus {
+  border: 0 none;
+  position: absolute;
+  cursor: pointer;
+  line-height: 2.5em;
+  font-size: 1.2em;
+  background-color: transparent;
+  width: 50px;
+  right: 0;
+  font-weight: 700;
+  color: #3a6c44;
+  transition: background-color 0.1s;
+  z-index: 2;
+}
+
+button.clear-button:hover {
+  transition: color 0.25s;
+  color: #2b5533;
+}
+
+button.decode,
+button.decode:focus {
+  background-color: #3a6c44;
+  font-family: inherit;
+  cursor: pointer;
+  font-size: 1.2em;
+  line-height: 1.2em;
+  margin: 0;
+  padding: 16px 48px;
+  border: 0 none;
+  color: #f7f7f7;
+  transition: background-color 0.1s;
+}
+
+button.decode:hover {
+  transition: background-color 0.25s;
+  background-color: #2b5533;
+}
+
+.actions {
+  margin: 32px 0;
+  text-align: right;
+}
+
+.clear-wrapper {
+  position: relative;
 }
 
 .page-wrapper {
   flex: 1 0 auto;
 }
 
-header,
-footer {
-  background-color: #eee;
-}
-
 h1 {
-  height: 2em;
-  line-height: 2em;
+  height: 3em;
+  line-height: 3em;
   font-size: 2em;
+  font-weight: inherit;
+  color: #3a6c44;
+}
+
+h1 strong,
+h1 .light {
+  border-bottom: 1px solid #3a6c44;
+}
+
+.light {
+  font-weight: 300;
+}
+
+section {
+  padding: 64px 0;
 }
 
 footer {
+  background-color: #3a6c44;
+  color: #f7f7f7;
   height: 3em;
   line-height: 3em;
   flex-shrink: 0;
   font-size: 0.9em;
+  text-align: center;
 }
 
 .content .wrapper {
-  margin: 8px 0 24px;
+  margin: 0 0 32px;
 }
 
 .result-wrapper {
-  padding: 8px;
+  padding: 32px;
 }
 
 .success {
