--- a/web/css/style.css
+++ b/web/css/style.css
@@ -31,11 +31,6 @@
     margin: 32px 0;
   }
 
-  h1 strong,
-  h1 .light {
-    border-bottom: 1px solid #3a6c44;
-  }
-
   section {
     padding: 64px 0;
   }
@@ -52,6 +47,8 @@ html {
 
 body {
   margin: 0;
+  background-color: #343a40;
+  color: #fff;
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
   display: flex;
@@ -74,7 +71,6 @@ strong {
 
 h1 {
   font-weight: inherit;
-  color: #3a6c44;
 }  
 
 header a:link,
@@ -88,7 +84,8 @@ header a:hover {
 
 input,
 input:hover {
-  background-color: #f7f7f7;
+  background-color: #fff;
+  color: #222;
   width: 100%;
   font-family: inherit;
   font-size: 1.2em;
@@ -96,13 +93,7 @@ input:hover {
   margin: 0;
   padding: 0;
   border: 0 none;
-  border-bottom: 1px solid #f7f7f7;
   z-index: 1;
-}
-
-input:focus,
-input:active {
-  border-bottom: 1px solid #3a6c44;
 }
 
 button.clear-button,
@@ -116,19 +107,19 @@ button.clear-button:focus {
   width: 50px;
   right: 0;
   font-weight: 700;
-  color: #3a6c44;
+  color: #8d0a1a;
   transition: background-color 0.1s;
   z-index: 2;
 }
 
 button.clear-button:hover {
   transition: color 0.25s;
-  color: #2b5533;
+  color: #790816;
 }
 
 button.decode,
 button.decode:focus {
-  background-color: #3a6c44;
+  background-color: #8d0a1a;
   font-family: inherit;
   cursor: pointer;
   font-size: 1.2em;
@@ -141,7 +132,7 @@ button.decode:focus {
 
 button.decode:hover {
   transition: background-color 0.25s;
-  background-color: #2b5533;
+  background-color: #790816;
 }
 
 .content {
@@ -163,8 +154,7 @@ button.decode:hover {
 }
 
 footer {
-  background-color: #3a6c44;
-  color: #f7f7f7;
+  background-color: #272930;
   line-height: 3em;
   flex-shrink: 0;
   font-size: 0.9em;
@@ -179,10 +169,9 @@ footer {
   padding: 32px;
 }
 
-.success {
-  background-color: #def2de;
+.success,
+.error {
+  background-color: #272930;
+  color: #fff;
 }
 
-.error {
-  background-color: #f7eaea;
-}
